# ButterflyVR

./: CODE_OF_CONDUCT.md  README.md  contributing.md  default_bus_layout.tres  export_presets.cfg  gdextext.gdextension  gdextext.gdextension.uid  icon.svg.import  project.godot
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  docs-request.md  feature_request.md
.github/workflows/: build_rust_godot.yaml  rust.yml
rust/butteryfly-rs-module/: Cargo.toml
rust/butteryfly-rs-module/src/: client.rs  lib.rs  messages.rs  net_nodes.rs  serializer.rs  server.rs  voice.rs
scenes/autoload/: avatar_pack_loader.gd  avatar_pack_loader.gd.uid  network_manager.tscn  world_access.gd  world_access.gd.uid
scenes/objects/: interactable.gd  interactable.gd.uid  object_placeholder.gd  object_placeholder.gd.uid  object_placeholder.tscn  outliner.gd  outliner.gd.uid
scenes/player/: audio_handler.gd  audio_handler.gd.uid  audio_handler.tscn  avatar_manager.gd  avatar_manager.gd.uid  camera.tscn  camera_3d.gd  camera_3d.gd.uid  chat_bubble.gd  chat_bubble.gd.uid  grabber.gd  grabber.gd.uid  highlighter.gd  highlighter.gd.uid  interacter.gd  interacter.gd.uid  local_player.tscn  local_player_desktop.tscn  movement_handler.gd  movement_handler.gd.uid  movement_networker.gd  movement_networker.gd.uid  name_plate.gd  name_plate.gd.uid  name_plate.tscn  pivot_center.gd  pivot_center.gd.uid  player.gd  player.gd.uid  player.tscn  player_access.gd  player_access.gd.uid  player_networker.gd  player_networker.gd.uid  raycaster.tscn  remote_grabber.gd  remote_grabber.gd.uid  (+1 more)
(+61 files in other folders)
