[package]
name = "butteryfly-rs-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3.9"
bitvec = "1.0.1"
build-time = "0.1.3"
dyn-clone = "1.0.19"
godot = { version = "0.2.2", features = ["experimental-threads"] }
netcode-rs = "1.4.0"
opus = "0.3.0"
rand = "0.9.0"
sha2 = "0.10.8"

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
panic = "unwind"
